<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon08"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon06"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_edit_profile"
        android:icon="@drawable/icon05"
        android:title="@string/edit" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar02"
        android:title="@string/profile"
        />

</menu>