<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/header"
        tools:ignore="MissingConstraints"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_revert"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/modifier"
        android:textColor="@color/white"
        android:padding="10dp"/>


    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-180dp">
        <ImageView
            android:id="@+id/user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar03"
            />

        <TextView
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_below="@+id/user"
            android:singleLine="true"
            android:text="Alice"
            android:textAlignment="center" />

    </RelativeLayout>


        <TextView
            android:layout_marginTop="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prénom"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/prenom"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/round2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="250dp"
            android:hint="Alice"
            android:padding="20dp"

            />
        <TextView
            android:layout_marginTop="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/nom"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/round2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="350dp"
            android:hint="SMITH"
            android:padding="20dp"
            />
        <TextView
            android:layout_marginTop="400dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:padding="20dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:padding="20dp"
            android:orientation="horizontal">

            <RadioButton

                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garcon" />
            <RadioButton

                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fille"
                android:checked="true"/>
            <RadioButton

                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autre" />
        </RadioGroup>
        <TextView
            android:layout_marginTop="500dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/birth"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/round2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="520dp"
            android:hint="26 June 2016"
            android:inputType="date" />
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Les réseaux sociaux de l'enfant"
            android:layout_marginTop="520dp"
            android:padding="20dp"
            android:layout_below="@+id/editTextDate"
            android:textColor="@color/Blue4in1"/>



</FrameLayout>