<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="400dp"
       android:layout_height="200dp"
       android:src="@drawable/header"
       tools:ignore="MissingConstraints"
       />
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@android:drawable/ic_menu_revert"
       android:padding="5dp"
 />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="top|center"
       android:text="@string/profile"
       android:textColor="@color/white"
       android:padding="10dp"/>
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@android:drawable/ic_menu_edit"
       android:layout_gravity="top|right"
       android:padding="5dp"/>

   <RelativeLayout
       android:id="@+id/r1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="-180dp">
      <ImageView
          android:id="@+id/user"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:src="@drawable/avatar01"
          />

      <TextView
          android:id="@+id/profil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_marginLeft="30dp"
          android:layout_below="@+id/user"
          android:singleLine="true"
          android:text="@string/nom_profile"
          android:textAlignment="center" />
      <TextView
          android:layout_below="@+id/profil"
          android:id="@+id/mail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_marginLeft="30dp"
          android:singleLine="true"
          android:text="@string/mail"
          android:textAlignment="center" />




   </RelativeLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:text="@string/enfant"
    android:textColor="@color/Blue4in1"
    android:textAlignment="textStart"
    android:textSize="18sp"
    android:layout_marginTop="280dp"
    android:padding="10dp"
    />
   <LinearLayout
       android:id="@+id/l2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="290dp"
       android:layout_below="@+id/r1"
       android:layout_centerInParent="true"
       android:orientation="horizontal"
       tools:ignore="NotSibling">
<!--
      <androidx.cardview.widget.CardView
          android:id="@+id/card1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:cardMaxElevation="12dp"
          app:cardPreventCornerOverlap="true"
          app:cardUseCompatPadding="true"
          android:clickable="true"
          >


         <ImageView
             android:id="@+id/avater"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:padding="30dp"
            android:src="@drawable/avatar04"
             android:textAlignment="center"

             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:text="Jerry SMITH"
             android:padding="30dp"
             android:textAlignment="center"

             android:textSize="18sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
             android:text="10 ans"
             android:paddingLeft="50dp"
             android:paddingTop= "35dp"
             android:paddingBottom="10dp"
             android:textAlignment="center"

             android:textSize="18sp" />
      </androidx.cardview.widget.CardView>


      <androidx.cardview.widget.CardView
          android:id="@+id/card2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:cardMaxElevation="12dp"
          app:cardPreventCornerOverlap="true"
android:layout_marginTop="20dp"
          android:clickable="true"
          >


         <ImageView
             android:id="@+id/avater2"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:padding="30dp"
             android:src="@drawable/avatar03"
             android:textAlignment="center"

             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:text="Alice SMITH"
             android:padding="30dp"
             android:textAlignment="center"

             android:textSize="18sp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
             android:text="12 ans"
             android:paddingLeft="50dp"
             android:paddingTop= "35dp"
             android:paddingBottom="10dp"
             android:textAlignment="center"

             android:textSize="18sp" />
      </androidx.cardview.widget.CardView>

-->
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/horizontalRv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:scrollbars="horizontal" />
   </LinearLayout>
   <TextView
       android:id="@+id/txt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/param_compte"
       android:textColor="@color/Blue4in1"
       android:textAlignment="textStart"
       android:textSize="18sp"
       android:layout_below="@+id/l2"
       android:layout_marginTop="500dp"
       android:padding="10dp"
       />

   <LinearLayout
       android:id="@+id/l3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="360dp"
       >

      <ImageView
          android:id="@+id/img"
          android:layout_width="70dp"
          android:layout_height="90dp"
          android:layout_marginTop="170dp"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="30dp"
          android:src="@drawable/icon01" />

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="250dp"
          android:text="@string/conf"

          android:textAlignment="center"
          android:layout_marginLeft="-80dp"
          android:layout_alignParentLeft="true"

          />
      <ImageView
          android:id="@+id/img2"
          android:layout_width="70dp"
          android:layout_height="90dp"
          android:layout_marginTop="170dp"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="30dp"
          android:src="@drawable/icon02" />

      <TextView
          android:layout_width="110dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="250dp"
          android:text="@string/forfait"

          android:textAlignment="center"
          android:layout_marginLeft="-90dp"
          android:layout_alignParentLeft="true"

          />
      <ImageView
          android:id="@+id/img3"
          android:layout_width="70dp"
          android:layout_height="90dp"
          android:layout_marginTop="170dp"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="30dp"
          android:src="@drawable/icon03" />

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="250dp"
          android:text="@string/sécurité"

          android:textAlignment="center"
          android:layout_marginLeft="-90dp"
          android:layout_alignParentLeft="true"

          />
   </LinearLayout>

</FrameLayout>